added search using Property Id , room type , from data and To data